USAGOV-1132-Realign-Footer-Button: Footer button hover, fixed.

--- a/web/themes/custom/usagov/sass/_footer.scss
+++ b/web/themes/custom/usagov/sass/_footer.scss
@@ -113,6 +113,10 @@
   margin-inline: 0 !important;
 }
 
+.footer-button:hover {
+  border: 1px solid #1b1b1b;
+}
+
 #footer-email {
   border-color: var($off-black);
 }
